--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
+    "joi": "^17.12.1",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.9.1",
+    "ulidx": "^2.3.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "nodemon": "^3.0.3",
     "prettier": "3.2.5"
   }
