--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "joi": "^17.12.1",
     "lucide-react": "^0.330.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
