--- a/.github/workflows/ci.client.yml
+++ b/.github/workflows/ci.client.yml
@@ -12,6 +12,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Use Node.js
         uses: actions/setup-node@v4
+        env:
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         with:
           node-version: "20.x"
       - run: npm install
