--- a/.github/workflows/ci.client.yml
+++ b/.github/workflows/ci.client.yml
@@ -16,6 +16,8 @@ jobs:
           node-version: "20.x"
       - run: npm install
       - run: npm run build
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
   lint:
     runs-on: ubuntu-latest
