--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@sentry/react": "^7.101.1",
     "@sentry/vite-plugin": "^2.14.1",
     "joi": "^17.12.1",
