--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -2,5 +2,6 @@
   "semi": true,
   "printWidth": 120,
   "singleQuote": false,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
