--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@sentry/vite-plugin": "^2.14.1",
     "joi": "^17.12.1",
     "lucide-react": "^0.330.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
