--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@sentry/react": "^7.101.1",
     "@sentry/vite-plugin": "^2.14.1",
     "joi": "^17.12.1",
     "lucide-react": "^0.330.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
