--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@sentry/react": "^7.101.1",
     "@sentry/vite-plugin": "^2.14.1",
+    "@tanstack/react-query": "^5.22.2",
+    "@tanstack/react-query-devtools": "^5.24.0",
     "joi": "^17.12.1",
     "lucide-react": "^0.330.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
