--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@mantine/form": "^7.5.3",
     "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.1",
     "@sentry/react": "^7.101.1",
@@ -19,13 +21,16 @@
     "@tanstack/react-query-devtools": "^5.24.0",
     "joi": "^17.12.1",
     "lucide-react": "^0.330.0",
+    "mantine-form-yup-resolver": "^2.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
