--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
