--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/tempo": "^0.0.10",
     "@hookform/resolvers": "^3.3.4",
     "@mantine/form": "^7.5.3",
     "@material-tailwind/react": "^2.1.9",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@reduxjs/toolkit": "^2.2.1",
     "@sentry/react": "^7.101.1",
     "@sentry/vite-plugin": "^2.14.1",
