--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@sentry/vite-plugin": "^2.14.1",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
+    "@uploadcare/blocks": "0.32.4",
     "joi": "^17.12.1",
     "lucide-react": "^0.330.0",
     "mantine-form-yup-resolver": "^2.0.0",
