--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,9 @@
     "@sentry/vite-plugin": "^2.14.1",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "@uploadcare/blocks": "0.32.4",
     "joi": "^17.12.1",
     "lexical": "^0.13.1",
