--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@mantine/form": "^7.5.3",
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@reduxjs/toolkit": "^2.2.1",
     "@sentry/react": "^7.101.1",
     "@sentry/vite-plugin": "^2.14.1",
