--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,28 @@
   "dependencies": {
     "@formkit/tempo": "^0.0.10",
     "@hookform/resolvers": "^3.3.4",
+    "@lexical/code": "^0.13.1",
+    "@lexical/link": "^0.13.1",
+    "@lexical/list": "^0.13.1",
+    "@lexical/react": "^0.13.1",
+    "@lexical/rich-text": "^0.13.1",
+    "@lexical/selection": "^0.13.1",
+    "@lexical/utils": "^0.13.1",
     "@mantine/form": "^7.5.3",
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@reduxjs/toolkit": "^2.2.1",
     "@sentry/react": "^7.101.1",
     "@sentry/vite-plugin": "^2.14.1",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "@uploadcare/blocks": "0.32.4",
     "joi": "^17.12.1",
+    "lexical": "^0.13.1",
     "lucide-react": "^0.330.0",
     "mantine-form-yup-resolver": "^2.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
