--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "sonner": "^1.4.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
