--- a/client/package.json
+++ b/client/package.json
@@ -23,11 +23,15 @@
     "@mantine/form": "^7.5.3",
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@reduxjs/toolkit": "^2.2.1",
     "@sentry/react": "^7.101.1",
     "@sentry/vite-plugin": "^2.14.1",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "@uploadcare/blocks": "0.32.4",
     "joi": "^17.12.1",
     "lexical": "^0.13.1",
@@ -42,6 +46,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "sonner": "^1.4.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
